change data body to be base64 encoded because something is being lost or decoded improperly from the million client libraries along the way to google cloud function. set cron function to be syncronized

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,7 +1,7 @@
 cron:
 - description: "assemble"
   url: /cron/assmble
-  schedule: every 24 hours
+  schedule: every 6 hours synchronized
 - description: "take-picture"
   url: /cron/take-picture
-  schedule: every 1 hours
+  schedule: every 1 hours synchronized
