--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "^1.4.0",
-    "@google-cloud/storage": "^1.6.0"
+    "@google-cloud/storage": "^1.6.0",
+    "googleapis": "^31.0.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
