--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "^1.4.0",
+    "@google-cloud/pubsub": "^0.18.0",
     "@google-cloud/storage": "^1.6.0",
-    "googleapis": "^31.0.2",
-    "google-auth-library": "^1.5.0"
+    "google-auth-library": "^1.5.0",
+    "googleapis": "^31.0.2"
   },
   "devDependencies": {
     "chai": "^4.1.2",
